    - Put cxterm-ks in korean task to replace hanterm. I hope that's right.
    - Rename mozilla-locale-es to mozilla-locale-es-es.
    - For chinese-t, use doc-linux-zh-text, which provides traditional
      chinese. doc-linux-zh-t went away.
    - doincludes.pl and makedesc.pl use apt-cache dumpavail instead of
      dselect available file, for more up-to-date information.

 -- Joey Hess <joeyh@debian.org>  Wed, 19 Mar 2003 23:12:33 +0100

tasksel (1.25) unstable; urgency=low

  * Add a LSB task.

 -- Joey Hess <joeyh@debian.org>  Sun, 16 Mar 2003 23:07:53 -0800

tasksel (1.24) unstable; urgency=low

  * Add mozilla-locale-da to danish task and removed openoffice stuff.
  * Fixed man page formatting.

 -- Joey Hess <joeyh@debian.org>  Wed, 26 Feb 2003 12:39:18 -0500

tasksel (1.23) unstable; urgency=low

  * Added to games task:
    - vecteroids (asteroids clone)
    - frozen-bubble
  * Rebuilt against current gnome and kde metapackages.

 -- Joey Hess <joeyh@debian.org>  Sat,  8 Feb 2003 12:29:07 -0500

tasksel (1.22) unstable; urgency=low

  * Switched from emacs20 to emacs21. Closes: #152018
  * Added Danish language task by Claus Hindsgaul <claus_h@image.dk>.
  * Fixed OOo name. Closes: #158936
  * Patch from Jeff Licquia <licquia@progeny.com> to make tasksel use all
    *.desc files in /usr/share/tasksel, to allow third parties to drop in
     their own additional tasks.
  * This build, at least, will not contain CVS dirs in the source package
    (because I build with DH_ALWAYS_EXCLUDE=CVS set, and pass -ICVS to
    dpkg-buildpackage. Closes: #148759
  * Added wireless-tools to the laptop task as laptops increasingly use
    wireless cards. I think adding wavemon too is a bit too much.
    Closes: #168948
  * Make the tasksel menu entry work as non-root. Closes: #144340

 -- Joey Hess <joeyh@debian.org>  Thu,  5 Dec 2002 13:44:43 -0500

tasksel (1.21) unstable; urgency=low

  * This is aimed at sid, not woody.