@@ -1,7 +1,4 @@
-$Id: TODO,v 1.9 2002/03/24 02:41:25 joeyh Rel $
+$Id: TODO,v 1.10 2003/07/25 18:06:28 joeyh Exp $
 - fix screen resize code (in dialogs, it doesn't work right)
 - figure out how to properly install the i18n stuff
 - show already installed tasks
-- support for Essential: fields in task desc file. These make it work
-  better with partial archive subsets (CDs). The fields are already in the
-  files.
