@@ -4,7 +4,7 @@ lists of packages that they might use to perform the tasks, and grouping
 information to make related sets of tasks appear together.
 
 The file format is a rfc-822 style stanza, with fields named Task, Section,
-Description (which should include an extended descrition), Essential, and
+Description (which should include an extended descrition), Key, and
 Packages. The Packages field should include the list of packages one per
 line after it, indented by one space each, like so:
 
@@ -17,11 +17,8 @@ Packages:
 When the task is selected, any of those packages that are available will be
 selected.
 
-The Essential field is the same, but packages listed in it must be
-available or the task should not be displayed at all. Items listed in the
-Essential field must be re-listed in the Packages field, currently, until
-the scripts that generate the overrides info are updated to know about this
-new field.
+The Key field is the same, but packages listed in it must be available or
+the task should not be displayed at all.
 
 Comments may appear in the file, by prefixing a line with a hash mark
 ('#').
@@ -38,7 +35,9 @@ should not conflict, or the results will be rather arbitrary.
 Packages that are only available on some architectures, or that may not
 be available on the user's installation media may still be listed. This 
 is no problem, they are simply ignored in those cases. Take care listing
-such packages as Essential however.
+such packages as Key however.
+
+List only real packages, not virtual packages.
 
 Users are given the opportunity to drill down and select/unselect
 individual packages; the tasks they select only serve as a starting
