@@ -4,7 +4,7 @@ Description: X window system
  This task provides the essential components for a standalone workstation
  running the X Window System. It provides the X libraries, an X server, a
  set of fonts, and a group of basic X clients and utilities.
-Essential:
+Key:
  x-window-system
 Packages:
  x-window-system
