@@ -2,16 +2,8 @@ Task: c-dev
 Section: devel
 Description: C and C++
  A complete environment for development of programs in the C and C++ 
- programming languages, including:
-  o Tools common for C, C++ and Objective C development
-  o A C preprocessor
-  o C and C++ compilers
-  o Development files of the standard C and C++ libraries
-  o Debugging tools
-  o Literate programming tools
-  o C source analysis tools and tools to manipulate C source
-  o Documentation
-Essential:
+ programming languages.
+Key:
  gcc
  cpp
  g++
