@@ -4,7 +4,7 @@ Description: Simplified Chinese environment
  This task installs programs, data files, fonts, and
  documentation that makes it easier for Chinese speakers
  to use Debian, using the simplified Chinese encoding.
-Essential:
+Key:
   cpanel
   rxvt-ml
   chinput
