@@ -4,7 +4,7 @@ Description: Traditional Chinese environment
  This task installs programs, data files, fonts, and
  documentation that makes it easier for Chinese speakers 
  to use Debian, using the traditional Chinese encoding.
-Essential:
+Key:
   cpanel
   rxvt-ml
   chinput
