@@ -4,7 +4,7 @@ Description: Cyrillic environment
  This task provides Cyrillic fonts and other software you will need in
  order to use Cyrillic.  It supports Belarusian, Bulgarian,
  Macedonian, Russian, Serbian and Ukrainian.
-Essential:
+Key:
  language-env
  console-cyrillic
 Packages:
