@@ -3,7 +3,7 @@ Section: l10n
 Description: Danish environment
  This task installs packages and documentation in Danish
  to help Danish speaking people use Debian.
-Essential:
+Key:
  locales
  language-env
 Packages:
