@@ -10,7 +10,7 @@ Description: SQL database
  compliance and some SQL3 features.  It is suitable for use with multi-user
  database access, through its facilities for transactions and fine-grained
  locking.
-Essential:
+Key:
  postgresql
 Packages: 
  postgresql
