@@ -5,7 +5,7 @@ Description: Desktop environment
  of session managers, file managers and web browsers. It incorporates
  both the GNOME and KDE desktops, and provides a display manager
  which lets the user choose between the two.
-Essential:
+Key:
   x-window-system-core
 #include kde
 #Automatically added by doincludes.pl; do not edit.
