@@ -3,7 +3,7 @@ Section: user
 Description: Dialup system
  This task selects packages that address special needs of computers
  using a part-time dialup connection (by modem, ISDN, ADSL, or cable).
-Essential:
+Key:
  ppp
  pppoe
  isdnutils
