@@ -2,7 +2,7 @@ Task: dns-server
 Section: server
 Description: DNS server
  Selects the BIND DNS server, and related documentation and utility packages.
-Essential:
+Key:
  bind9
 Packages:
  bind9
