@@ -2,7 +2,7 @@ Task: file-server
 Section: server
 Description: File server
  This task sets up your system to be a file server.
-Essential:
+Key:
  nfs-kernel-server
  samba
 Packages:
