@@ -3,7 +3,7 @@ Section: l10n
 Description: French environment
  This task installs packages and documentation in French
  to help French speaking people use Debian.
-Essential:
+Key:
  language-env
  manpages-fr
 Packages:
