@@ -3,7 +3,7 @@ Section: l10n
 Description: German environment
  This task installs packages and documentation in German
  to help German speaking people use Debian.
-Essential:
+Key:
  locales
  language-env
  manpages-de
