@@ -3,7 +3,7 @@ Section: l10n
 Description: Japanese environment
  This task installs packages that make it easier for Japanese speakers
  to use Debian.
-Essential:
+Key:
  locales
  language-env
  jfbterm
