@@ -2,7 +2,7 @@ Task: java-dev
 Section: devel
 Description: Java
  A java development environment.
-Essential:
+Key:
  gcj
  java-common
 Packages:
