@@ -3,14 +3,14 @@ Section: misc
 Description: Custom kernel compilation
  This task includes everything you should need to build your own custom
  kernel.
-Essential:
- kernel-package
- kernel-source
-Packages:
+Key:
  kernel-package
  # This needs to track the current kernel-source version, unfortunatly.
- # Virual packages will not do.
+ # Virtual packages will not do.
  # How this works for other architectures, I really cannot say.
+ kernel-source-2.4.21
+Packages:
+ kernel-package
  kernel-source-2.4.21
  libc6-dev
  debianutils
