@@ -3,7 +3,7 @@ Section: l10n
 Description: Korean environment
  This task installs programs, data files, fonts, and documentation
  to make it easier for Korean speakers to use Debian.
-Essential:
+Key:
  locales
  manpages-ko
  cxterm-ks
