@@ -3,7 +3,7 @@ Section: user
 Description: Laptop system
  This is a collection of tools that laptop users will expect to find on a
  system.
-Essential:
+Key:
  apmd
  pcmcia-cs
 Packages:
