@@ -3,7 +3,7 @@ Section: server
 Description: Mail server
  This task selects a variety of package useful for a general purpose mail
  server system.
-Essential:
+Key:
  exim
 Packages:
  qpopper # HELP: What's a good pop server?
