@@ -11,7 +11,7 @@ Description: Usenet news server
  existing server, just select the news reader program you desire and it
  will pull in any required pieces. Only use this task if you intend
  to operate a server.
-Essential:
+Key:
  inn2
 Packages:
  inn2
