@@ -5,7 +5,7 @@ Description: Office environment
  word processor, a spreadsheat, a personal finance program, project
  management software, slide show and graphing software, and more.
  This is a rather large collection of software.
-Essential:
+Key:
   x-window-system-core
 #include gnome-office
 #Automatically added by doincludes.pl; do not edit.
