@@ -3,7 +3,7 @@ Section: l10n
 Description: Polish environment
  This task installs packages and documentation in Polish
  to help Polish speaking people use Debian.
-Essential:
+Key:
  locales
  manpages-pl
  language-env
