@@ -2,7 +2,7 @@ Task: print-server
 Section: server
 Description: Print server
  This task sets up your system to be a print server.
-Essential:
+Key:
  lpr
 Packages:
  samba
