@@ -3,7 +3,7 @@ Section: devel
 Description: Python
  Many Python tools and extensions, for developing scripts and simple or 
  complex applications in Python.
-Essential:
+Key:
  python
 Packages:
  python
