@@ -4,7 +4,7 @@ Description: Russian environment
  This task installs programs and documentation in Russian
  to help Russian speaking people use Debian.
 Maintainer: Peter Novodvorsky <nidd@debian.org>
-Essential:
+Key:
  locales
  language-env
  manpages-ru
