@@ -3,7 +3,7 @@ Section: l10n
 Description: Spanish environment
  This task installs programs, data files,  and
  documentation that makes it easier for Spanish speakers to use Debian.
-Essential:
+Key:
  locales
  language-env
  manpages-es
