@@ -6,7 +6,7 @@ Description: Tcl/Tk
   o Script-level manpages
   o C-level manpages
   o C headers and libraries
-Essential:
+Key:
  tcl8.3-dev
  tk8.3-dev
 Packages:
