@@ -2,7 +2,7 @@ Task: tex
 Section: misc
 Description: TeX/LaTeX environment
  a TeX/LaTeX environment
-Essential:
+Key:
  tetex-base
  tetex-bin
  tetex-extra
