@@ -3,7 +3,7 @@ Section: server
 Description: Web server
  This task selects a packages useful for a general purpose web server
  system.
-Essential:
+Key:
  apache
 Packages:
  apache
